--- a/app/frontend/src/app/pages/contract-vehicles/erm.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/erm.component.html
@@ -30,7 +30,7 @@
         federal records management statutes and regulations, <a href="https://ussm.gsa.gov/" target="_blank" aria-label="GSA's Unified Shared Services Management (Opens New Window)"> GSA’s Unified Shared 
         Services Management (USSM)</a> office and the National Archives and Records 
         Administration (NARA) worked together to develop <a href="https://www.archives.gov/records-mgmt/policy/universalermrequirements" target="_blank" aria-label="Universal Electronic Records Management (Opens New Window)">Universal Electronic Records Management (ERM)</a> Requirements. Simultaneously, GSA’s Integrated Workplace Acquisition Center
-        (IWAC) incorporated these new requirements into Multiple Award Schedule (MAS) 36.
+        (IWAC) incorporated these new requirements into Multiple Award Schedule (MAS).
       </p>
       <p class="usa-font-lead">
         Electronic Records management products and services are now structured under MAS as SIN  <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" target="_blank" aria-label="SIN 518210ERM (Opens New Window)">518210ERM</a>, “Electronic Records Management Solutions.”
