--- a/app/frontend/src/app/pages/contract-vehicles/erm.component.html
+++ b/app/frontend/src/app/pages/contract-vehicles/erm.component.html
@@ -14,26 +14,26 @@
       <p class="usa-font-lead">Office Management category</p>
       
       <p class="usa-font-lead">
-        <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" target="_blank" aria-label="GSA Records Management Solutions Link (Opens New Window)">GSA Records Management Solutions</a>
+        <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" target="_blank" aria-label="GSA Records Management Solutions Link (Opens New Window)" rel="noopener noreferrer">GSA Records Management Solutions</a>
       </p>
       <p class="usa-font-lead">
         Electronic Records Management Solutions (ERM) SIN 518210ERM</p>
 
       <p class="usa-font-lead">
-        The Discovery Tool is updated periodically. The full and most current list of ERM vendors is found on <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES"target="_blank" aria-label="GSA eLibrary Link (Opens In New Window)">GSA eLibrary</a>.
+        The Discovery Tool is updated periodically. The full and most current list of ERM vendors is found on <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES"target="_blank" aria-label="GSA eLibrary Link (Opens In New Window)" rel="noopener noreferrer">GSA eLibrary</a>.
       </p>
 
       <p class="usa-font-lead">
         As technology has evolved and federal space has been reduced, the need for 
         managing both physical and electronic records has grown in scale and 
         complexity. In response to these challenges and to help agencies comply with 
-        federal records management statutes and regulations, <a href="https://ussm.gsa.gov/" target="_blank" aria-label="GSA's Unified Shared Services Management (Opens New Window)"> GSA’s Unified Shared 
+        federal records management statutes and regulations, <a href="https://ussm.gsa.gov/" target="_blank" aria-label="GSA's Unified Shared Services Management (Opens New Window)" rel="noopener noreferrer"> GSA’s Unified Shared 
         Services Management (USSM)</a> office and the National Archives and Records 
-        Administration (NARA) worked together to develop <a href="https://www.archives.gov/records-mgmt/policy/universalermrequirements" target="_blank" aria-label="Universal Electronic Records Management (Opens New Window)">Universal Electronic Records Management (ERM)</a> Requirements. Simultaneously, GSA’s Integrated Workplace Acquisition Center
+        Administration (NARA) worked together to develop <a href="https://www.archives.gov/records-mgmt/policy/universalermrequirements" target="_blank" aria-label="Universal Electronic Records Management (Opens New Window)" rel="noopener noreferrer">Universal Electronic Records Management (ERM)</a> Requirements. Simultaneously, GSA’s Integrated Workplace Acquisition Center
         (IWAC) incorporated these new requirements into Multiple Award Schedule (MAS).
       </p>
       <p class="usa-font-lead">
-        Electronic Records management products and services are now structured under MAS as SIN  <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" target="_blank" aria-label="SIN 518210ERM (Opens New Window)">518210ERM</a>, “Electronic Records Management Solutions.”
+        Electronic Records management products and services are now structured under MAS as SIN  <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" target="_blank" aria-label="SIN 518210ERM (Opens New Window)" rel="noopener noreferrer">518210ERM</a>, “Electronic Records Management Solutions.”
       </p>
       <p class="usa-font-lead">
         SIN 518210ERM provides a comprehensive capability to solve the complex challenges posed by the movement, manipulation, archiving, security, and management of electronic records. The abilities to maintain records securely, manage access and retrieval, preserve records for as long as necessary, and execute disposition are included. This SIN also includes any ancillary supplies and/or services necessary to provide a total electronic records management solution.
@@ -59,23 +59,23 @@
       <h3>ERM Links:</h3>
       <ul>
         <li>
-          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/consolidated-schedule/office-management-category" aria-label="MAS Office Management category  (Opens New Window)" target="_blank"> 
+          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/consolidated-schedule/office-management-category" aria-label="MAS Office Management category  (Opens New Window)" target="_blank" rel="noopener noreferrer"> 
           MAS Office Management category </a>
         </li> 
         <li>
-          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" aria-label="GSA Records Management Solutions (Opens New Window)" target="_blank"> 
+          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" aria-label="GSA Records Management Solutions (Opens New Window)" target="_blank" rel="noopener noreferrer"> 
           GSA Records Management Solutions</a>
         </li> 
         <li>
-          <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" aria-label="View MAS ERM Contracts on GSA eLibrary (SIN 518210) (Opens New Window)" target="_blank"> 
+          <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" aria-label="View MAS ERM Contracts on GSA eLibrary (SIN 518210) (Opens New Window)" target="_blank" rel="noopener noreferrer"> 
           View MAS ERM Contracts on GSA eLibrary (SIN 518210)</a>
         </li> 
         <li>
-          <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" aria-label="NARA’s Universal ERM Requirements (Opens New Window)" target="_blank"> 
+          <a href="https://www.gsaelibrary.gsa.gov/ElibMain/sinDetails.do?scheduleNumber=MAS&specialItemNumber=518210ERM&executeQuery=YES" aria-label="NARA’s Universal ERM Requirements (Opens New Window)" target="_blank" rel="noopener noreferrer"> 
           NARA’s Universal ERM Requirements</a>
         </li> 
         <li>
-          Contact us at <a href="mailto:recordsmanagement@gsa.gov" aria-label="mailto link for recordsmanagement@gsa.gov (Opens New Window)" target="_blank"> 
+          Contact us at <a href="mailto:recordsmanagement@gsa.gov" aria-label="mailto link for recordsmanagement@gsa.gov (Opens New Window)" target="_blank" rel="noopener noreferrer"> 
           recordsmanagement@gsa.gov</a>
         </li> 
       </ul>
@@ -85,13 +85,13 @@
       <h3>MAS Links:</h3>
       <ul>
         <li>
-          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" aria-label="GSA Schedules link (Opens New Window)" target="_blank"> About GSA Schedules </a>
+          <a href="https://www.gsa.gov/buying-selling/purchasing-programs/gsa-schedules/gsa-schedule-offerings/mas-categories/office-management-category/buyers-guidance-and-resources/records-management-solutions" aria-label="GSA Schedules link (Opens New Window)" target="_blank" rel="noopener noreferrer"> About GSA Schedules </a>
         </li>
         <li>
-          <a href="https://beta.sam.gov/opp/229b60cf2e9249e1a1ff9a097b7f51d2/view" aria-label="MAS Solicitation link under the “Office Management” category attachment (Opens New Window)" target="_blank"> MAS Solicitation </a> -- SIN 518210ERM is listed under the “Office Management” category attachment
+          <a href="https://beta.sam.gov/opp/229b60cf2e9249e1a1ff9a097b7f51d2/view" aria-label="MAS Solicitation link under the “Office Management” category attachment (Opens New Window)" target="_blank" rel="noopener noreferrer"> MAS Solicitation </a> -- SIN 518210ERM is listed under the “Office Management” category attachment
         </li>
         <li>
-          <a href="https://www.gsa.gov/about-us/organization/federal-acquisition-service/fas-initiatives/federal-marketplace-strategy" aria-label="MAS Consolidation and the Federal Marketplace Strategy link (Opens New Window)" target="_blank"> Information about the MAS Consolidation and the Federal Marketplace Strategy </a>
+          <a href="https://www.gsa.gov/about-us/organization/federal-acquisition-service/fas-initiatives/federal-marketplace-strategy" aria-label="MAS Consolidation and the Federal Marketplace Strategy link (Opens New Window)" target="_blank" rel="noopener noreferrer"> Information about the MAS Consolidation and the Federal Marketplace Strategy </a>
         </li>
       </ul>
     </div>
