BRMP-10157: Swapped the GSA logo for the Nav bar inplace of the the discovery icon

--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -51,8 +51,8 @@
     <div class="usa-nav-container">
       <div class="usa-navbar">
         <div class="discovery-logo">
-          <a href="/" title="Home" aria-label="Home">
-            <img src="{{APP_ASSETS}}assets/images/discovery-icon.png" width="95" height="95" alt="Discovery icon" />
+          <a href="/" title="Home" aria-label="Home" rel="noopener noreferrer">
+            <img src="{{APP_ASSETS}}assets/images/nav-logo.png" width="95" height="95" alt="GSA icon"/>
             <strong>Discovery</strong>
             <em>Market Research Tool</em>
           </a>
@@ -163,7 +163,7 @@
       <div id="gsa" class="usa-width-one-whole">
         <hr>
         <div>
-          <img src="{{APP_ASSETS}}assets/images/gsa-logo.jpg" width="60" height="60px" alt="GSA">
+          <img src="{{APP_ASSETS}}assets/images/nav-logo.png" width="60" height="60px" alt="GSA">
           <h2>U.S. General Services Administration</h2>
         </div>
       </div>
