BRMP-10157: Swapped to reverse GSA logo for the footer

--- a/app/frontend/src/app/app.component.html
+++ b/app/frontend/src/app/app.component.html
@@ -163,7 +163,7 @@
       <div id="gsa" class="usa-width-one-whole">
         <hr>
         <div>
-          <img src="{{APP_ASSETS}}assets/images/gsa-logo.jpg" width="60" height="60px" alt="GSA">
+          <img src="{{APP_ASSETS}}assets/images/gsa-reverse-logo.png" width="60" height="60px" alt="GSA">
           <h2>U.S. General Services Administration</h2>
         </div>
       </div>
